--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
 
     <link href="./assets/css/slick.css" rel="stylesheet" />
     <link href="./assets/css/style.css" rel="stylesheet" />
+
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K8YHW7GRXK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K8YHW7GRXK');
+</script>
   </head>
 
   <body class="home">
