--- a/newflavorsoftea/1-1-cjh-c/index.html
+++ b/newflavorsoftea/1-1-cjh-c/index.html
@@ -148,7 +148,7 @@
     <section class="project__loading">
       <div class="load__info">
         <div class="zoom">
-         <img class="zoom-finger" src="../../assets/img/zoom.svg" />
+          <img class="zoom-finger" src="../../assets/img/zoom.svg" />
           <p class="zoom-text">
             <span>한 손가락을 움직여 확대합니다.</span>
             <span>Move one finger over the image to zoom in.</span>
@@ -160,7 +160,9 @@
 
           <p class="swipe-text">
             <span>화면 양쪽을 탭하면 이전 / 다음 이미지를 볼 수 있습니다.</span>
-            <span>Tap either side of the screen to see the prev/next image.</span>
+            <span
+              >Tap either side of the screen to see the prev/next image.</span
+            >
           </p>
         </div>
 
@@ -215,7 +217,8 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;조장현</p>
-              </span>
+              </span></a
+            >
 
             <a href="../1-1-cjh-p/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
@@ -224,7 +227,8 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;조장현</p>
-              </span>
+              </span></a
+            >
 
             <a href="../1-1-cjh-t/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
@@ -233,7 +237,8 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;조장현</p>
-              </span>
+              </span></a
+            >
 
             <a href="../1-1-hwk-c/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
@@ -242,16 +247,17 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;홍우경</p>
-              </span>
+              </span></a
+            >
             <a href="../1-1-hwk-p/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
-                            <span class="item--projectname">
+              <span class="item--projectname">
                 <p>1-1-hwk-P</p>
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;홍우경</p>
               </span>
-
+            </a>
             <a href="../1-1-hwk-t/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
@@ -260,7 +266,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;홍우경</p>
               </span>
-
+            </a>
             <a href="../1-1-kjh-c/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
@@ -268,7 +274,8 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;김종훈</p>
-              </span>
+              </span></a
+            >
             <a href="../1-1-kjh-p/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
@@ -276,7 +283,8 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;김종훈</p>
-              </span>
+              </span></a
+            >
             <a href="../1-1-kjh-t/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
@@ -284,7 +292,8 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;김종훈</p>
-              </span>
+              </span></a
+            >
           </div>
 
           <div class="header__menutoggle__lang language__item visible ko">
