--- a/newflavorsoftea/1-1-cjh-t/index.html
+++ b/newflavorsoftea/1-1-cjh-t/index.html
@@ -216,7 +216,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;조장현</p>
               </span>
-
+</a>
             <a href="../1-1-cjh-p/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
@@ -225,7 +225,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;조장현</p>
               </span>
-
+</a>
             <a href="../1-1-cjh-t/" class="projectlist__item active">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
@@ -234,7 +234,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;조장현</p>
               </span>
-
+</a>
             <a href="../1-1-hwk-c/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
@@ -242,7 +242,7 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;홍우경</p>
-              </span>
+              </span></a>
             <a href="../1-1-hwk-p/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
                             <span class="item--projectname">
@@ -250,7 +250,7 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;홍우경</p>
-              </span>
+              </span></a>
 
             <a href="../1-1-hwk-t/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
@@ -259,7 +259,7 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;홍우경</p>
-              </span>
+              </span></a>
 
             <a href="../1-1-kjh-c/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
@@ -268,7 +268,7 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;김종훈</p>
-              </span>
+              </span></a>
             <a href="../1-1-kjh-p/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
@@ -276,7 +276,7 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;김종훈</p>
-              </span>
+              </span></a>
             <a href="../1-1-kjh-t/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
@@ -284,7 +284,7 @@
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;김종훈</p>
-              </span>
+              </span></a>
           </div>
 
           <div class="header__menutoggle__lang language__item visible ko">
