--- a/newflavorsoftea/1-1-kjh-c/index.html
+++ b/newflavorsoftea/1-1-kjh-c/index.html
@@ -145,7 +145,7 @@
   </head>
 
   <body class="default">
-<section class="project__loading">
+    <section class="project__loading">
       <div class="load__info">
         <div class="zoom">
           <img class="zoom-finger" src="../../assets/img/zoom.svg" />
@@ -160,7 +160,9 @@
 
           <p class="swipe-text">
             <span>화면 양쪽을 탭하면 이전 / 다음 이미지를 볼 수 있습니다.</span>
-            <span>Tap either side of the screen to see the prev/next image.</span>
+            <span
+              >Tap either side of the screen to see the prev/next image.</span
+            >
           </p>
         </div>
 
@@ -216,6 +218,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;조장현</p>
               </span>
+            </a>
 
             <a href="../1-1-cjh-p/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
@@ -225,6 +228,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;조장현</p>
               </span>
+            </a>
 
             <a href="../1-1-cjh-t/" class="projectlist__item">
               <span class="item--projectnumber">03</span>
@@ -234,6 +238,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;조장현</p>
               </span>
+            </a>
 
             <a href="../1-1-hwk-c/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
@@ -243,14 +248,16 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;홍우경</p>
               </span>
+            </a>
             <a href="../1-1-hwk-p/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
-                            <span class="item--projectname">
+              <span class="item--projectname">
                 <p>1-1-hwk-P</p>
               </span>
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;홍우경</p>
               </span>
+            </a>
 
             <a href="../1-1-hwk-t/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
@@ -260,6 +267,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;홍우경</p>
               </span>
+            </a>
 
             <a href="../1-1-kjh-c/" class="projectlist__item active">
               <span class="item--projectnumber">01</span>
@@ -269,6 +277,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;김종훈</p>
               </span>
+            </a>
             <a href="../1-1-kjh-p/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
@@ -277,6 +286,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;김종훈</p>
               </span>
+            </a>
             <a href="../1-1-kjh-t/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
@@ -285,6 +295,7 @@
               <span class="item--projectname">
                 <p>&nbsp;&nbsp;김종훈</p>
               </span>
+            </a>
           </div>
 
           <div class="header__menutoggle__lang language__item visible ko">
@@ -990,7 +1001,8 @@
     <script src="../../assets/js/bundle.js"></script>
 
     <script src="../../assets/js/detail-attr.js"></script>
-    <script src="../../assets/js/detail-functions.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <script src="../../assets/js/detail-functions.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="../../assets/js/load.js"></script>
   </body>
 </html>
